--- a/code/analysis/analysis_5/base0_ci.ipynb
+++ b/code/analysis/analysis_5/base0_ci.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c7a7263d-7a53-4cfd-a311-f770ce2445f8",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "368bf546-d90c-43fa-826e-f60fb5044c0a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "32f68f2d-0dd3-416b-89a3-16d3ccf44eee",
    "metadata": {
     "tags": []
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "432a0677-4a59-4f6e-8adf-52e52af5905b",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "51dc9a4c-d0ac-4394-bd16-21f305200ebf",
    "metadata": {},
    "outputs": [],
@@ -169,12 +169,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f60399f2-ef36-4b0b-b246-514bd58ff20c",
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train_s, x_train_st, x_train_nro, y_train_s, y_train_st, y_train_nro = fun.resampling( x_train, y_train )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a4dabde8-b069-4aa3-a52e-deac75af1563",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>observaciones</th>\n",
+       "      <th>variables</th>\n",
+       "      <th>Nro. No</th>\n",
+       "      <th>Nro. Si</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Original</th>\n",
+       "      <td>967.0</td>\n",
+       "      <td>14520.0</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>683.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SMOTE</th>\n",
+       "      <td>1366.0</td>\n",
+       "      <td>14520.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>683.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOMTE Tomek</th>\n",
+       "      <td>1212.0</td>\n",
+       "      <td>14520.0</td>\n",
+       "      <td>606.0</td>\n",
+       "      <td>606.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NRO</th>\n",
+       "      <td>1366.0</td>\n",
+       "      <td>14520.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>683.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             observaciones  variables  Nro. No  Nro. Si\n",
+       "Original             967.0    14520.0    284.0    683.0\n",
+       "SMOTE               1366.0    14520.0    683.0    683.0\n",
+       "SOMTE Tomek         1212.0    14520.0    606.0    606.0\n",
+       "NRO                 1366.0    14520.0    683.0    683.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_data      = np.zeros( ( 4, 4 ) )\n",
+    "\n",
+    "check_data[ 0 ] = [ x_train.shape[ 0 ], x_train.shape[ 1 ], \n",
+    "                    y_train.value_counts()[ 0 ], y_train.value_counts()[ 1 ] ]\n",
+    "\n",
+    "check_data[ 1 ] = [ x_train_s.shape[ 0 ], x_train_s.shape[ 1 ], \n",
+    "                    y_train_s.value_counts()[ 0 ], y_train_s.value_counts()[ 1 ] ]\n",
+    "\n",
+    "check_data[ 2 ] = [ x_train_st.shape[ 0 ], x_train_st.shape[ 1 ],\n",
+    "                    y_train_st.value_counts()[ 0 ], y_train_st.value_counts()[ 1 ] ]\n",
+    "\n",
+    "check_data[ 3 ] = [ x_train_nro.shape[ 0 ], x_train_nro.shape[ 1 ],\n",
+    "                    y_train_nro.value_counts()[ 0 ], y_train_nro.value_counts()[ 1 ] ]\n",
+    "\n",
+    "colnames        = [ 'observaciones', 'variables', 'Nro. No', 'Nro. Si' ]\n",
+    "\n",
+    "rownames        = [ 'Original',\n",
+    "                    'SMOTE',\n",
+    "                    'SOMTE Tomek',\n",
+    "                    'NRO' ]\n",
+    "\n",
+    "table_check_data = pd.DataFrame( check_data, columns = colnames )\n",
+    "table_check_data.index = rownames\n",
+    "table_check_data"
    ]
   },
   {
@@ -276,7 +384,13 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "af00f4cd-bd52-4fbd-9a8d-ec981d83325d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -314,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
