--- a/code/data/preprocess_data/preprocess.ipynb
+++ b/code/data/preprocess_data/preprocess.ipynb
@@ -356,7 +356,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "2a258092-8a91-41e0-852f-829c9943c8d2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# export_path = r'..\\..\\..\\extra\\descriptives'\n",
@@ -495,6 +500,10 @@
    "execution_count": 19,
    "id": "c7a55b8f-e109-41b1-9e14-862e3d741840",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -526,6 +535,10 @@
    "execution_count": 20,
    "id": "f5cec000-0010-49bb-88df-50f27c01e0bd",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -605,7 +618,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "1e1fa5d9-7283-4a7e-b35b-ef317f45a75a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -703,7 +722,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "28501059-3572-4338-9ca8-413212319a4f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -740,7 +765,13 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "c9dd02f5-6c74-4627-bf55-437a11838380",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1088,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
