--- a/code/analysis/analysis_4/base1_ci.ipynb
+++ b/code/analysis/analysis_4/base1_ci.ipynb
@@ -588,6 +588,10 @@
     "lasso_model_o          = LogisticRegressionCV( penalty = 'l1', solver = 'saga', cv = 10, random_state = 2023, n_jobs = -1 ).\\\n",
     "                                          fit( x_train, y_train )\n",
     "\n",
+    "\n",
+    "lasso_model_o          = LogisticRegressionCV( penalty = 'l1', solver = 'saga', cv = 10, random_state = 2023, n_jobs = -1 )\n",
+    "lasso_model_o.fit( x_train, y_train )\n",
+    "\n",
     "lasso_model_s          = LogisticRegressionCV( penalty = 'l1', solver = 'saga', cv = 10, random_state = 2023, n_jobs = -1 ).\\\n",
     "                                          fit( x_train_smote, y_train_smote )\n",
     "\n",
